--- a/Halaman Dashboard.html
+++ b/Halaman Dashboard.html
@@ -77,9 +77,7 @@
             </div>
           </div>
         </div>
-        <button>
-          <h1>Kamera</h1>
-        </button>
+        <a href="Halaman Kamera.html">Kamera</a>
       </div>
     </div>
     <script src="scriptDashboard.js"></script>
